fix: add jvm lock using MCS algorithm

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -13,14 +13,14 @@ spring:
         min-idle: 3
         time-between-eviction-runs: 5000
 lock:
-  redis:
-    reactive:
-      expire-after: PT1M
-      expire-evict-idle: PT10S
-      reactive-lock-type:
-        - DEFAULT
-        - REDIS
-        - CLH
+  reactive:
+    expire-after: PT1M
+    expire-evict-idle: PT10S
+    reactive-lock-type:
+      - DEFAULT
+      - REDIS
+      - CLH
+      - MCS
 logging:
   level:
     pro.chenggang: DEBUG
